# wordsmith

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.zig  default.nix  emsc.txt  main.c  meson.build  null  rules.c  shell.nix  wordsmith  ws.supp
doc/: ws.1  ws.1.adoc
include/: ws.h  ws_contrib.h
src/: bin.rs  cli.rs  config.rs  err.rs  ext.c  lib.rs  lint.c  lint.zig  main.c  main.zig  prose.c  prose.rs  prose.zig  regex.c  rule.c  rule.zig  rules.c  sink.c  sink.rs  sink.zig  util.c  ws.h
src/cli/: README.md  argparse.zig
src/lint/: mod.rs  regex.c  regex.rs  regex.zig
src/parse/: mod.rs
test/: rules.c  test.c
